Vytvořeno pomocí služby Colaboratory

--- a/Smap.ipynb
+++ b/Smap.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyObKFACVGo/LT9HhwaHPclR",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wenceslas12/Smap/blob/main/Smap.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -843,7 +855,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#odstranění duplicitních řádků\n",
+        "#Odstranění duplicitních řádků\n",
         "df = df.drop_duplicates()\n",
         "print(df.shape)"
       ],
@@ -868,6 +880,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Test chybějících hodnot\n",
         "df.isnull().sum()"
       ],
       "metadata": {
@@ -875,9 +888,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KVvPxrpniIVT",
-        "outputId": "2da5530d-8358-42d9-815e-c052c81635d2"
+        "outputId": "34cf4b1d-7d1f-4ea0-8261-bfe50aef5d55"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -903,7 +916,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 12
         }
       ]
     },
